admin html fayllari saqlandi

--- a/admin/index.html
+++ b/admin/index.html
@@ -42,7 +42,13 @@
                             <a href="./talaba.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Talabalar</span></a>
                         </li>
                         <li class="sidebar-item ">
+                            <a href="./kobinet.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Kabinet</span></a>
+                        </li>
+                        <li class="sidebar-item ">
                             <a href="./statistika.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Statistika</span></a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="./users.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Admin</span></a>
                         </li>
                         <li class="sidebar-item ">
                             <a href="./login.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Chiqish</span></a>
