--- a/admin/kobinet.html
+++ b/admin/kobinet.html
@@ -45,6 +45,9 @@
                         <li class="sidebar-item active">
                             <a href="./kobinet.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Kabinet</span></a>
                         </li>
+                        <li class="sidebar-item">
+                            <a href="./users.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Admin</span></a>
+                        </li>
                         <li class="sidebar-item ">
                             <a href="./login.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Chiqish</span></a>
                         </li>
