--- a/admin/users.html
+++ b/admin/users.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bannerlar</title>
+        <title>Statistika</title>
         <link rel="shortcut icon" href="../assets/compiled/svg/favicon.svg" type="image/x-icon">
         <link rel="stylesheet" href="../assets/compiled/css/app.css">
         <link rel="stylesheet" href="../assets/compiled/css/app-dark.css">
@@ -27,7 +27,7 @@
                         <li class="sidebar-item ">
                             <a href="./index.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Bosh sahifa</span></a>
                         </li>
-                        <li class="sidebar-item active">
+                        <li class="sidebar-item ">
                             <a href="./banner.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Bannerlar</span></a>
                         </li>
                         <li class="sidebar-item ">
@@ -39,13 +39,13 @@
                         <li class="sidebar-item ">
                             <a href="./talaba.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Talabalar</span></a>
                         </li>
-                        <li class="sidebar-item ">
+                        <li class="sidebar-item">
                             <a href="./statistika.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Statistika</span></a>
                         </li>
                         <li class="sidebar-item ">
                             <a href="./kobinet.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Kabinet</span></a>
                         </li>
-                        <li class="sidebar-item">
+                        <li class="sidebar-item active">
                             <a href="./users.html" class='sidebar-link'><i class="bi bi-grid-fill"></i><span>Admin</span></a>
                         </li>
                         <li class="sidebar-item ">
@@ -60,7 +60,7 @@
                 <a href="#" class="burger-btn d-block d-xl-none"><i class="bi bi-justify fs-3"></i></a>
             </header>
             <div class="page-heading">
-                <h3>Bannerlar</h3>
+                <h3>Admin</h3>
             </div> 
             <div class="page-content">
                 
